--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ node_modules/
 # Environment variables
 .env
 
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
 # Editor directories and files
 .idea
 .vscode
