--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,11 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "requests>=2.31.0",
     "python-multipart>=0.0.6",
+    "pillow>=10.0.0",
+    "pymupdf>=1.23.0",
+    "python-docx>=1.1.0",
+    "gradio>=4.0.0",
+    "plotly>=5.0.0",
 ]
 
 [project.optional-dependencies]
