--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "python-docx>=1.1.0",
     "gradio>=4.0.0",
     "plotly>=5.0.0",
+    "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
