Task 6: Implement API Interface Specifications with security features
- Added API security module with rate limiting and request validation
- Implemented rate limiting: 60 requests/minute, 1000/hour
- Added security headers and request size validation (10MB limit)
- Created new API endpoints: /api/info and /api/status
- Added comprehensive API security tests
- Updated documentation with API interface specifications
- All tests passing (100% success rate)

--- a/env.example
+++ b/env.example
@@ -13,4 +13,9 @@ OPENAI_API_KEY=your_openai_api_key_here
 
 # Model Server Configuration (for local Ollama)
 MODEL_SERVER_URL=http://localhost:11434/v1
-MODEL_SERVER_API_KEY=EMPTY 
+MODEL_SERVER_API_KEY=EMPTY
+
+# API Security Configuration
+RATE_LIMIT_PER_MINUTE=60
+RATE_LIMIT_PER_HOUR=1000
+ALLOWED_ORIGINS=* 
