feat: Complete Docker testing and configuration
- Fixed Dockerfile PATH issues for uv command
- Added README.md to Docker build context
- Fixed Docker Compose casing warnings
- Modified docker-compose.yml to use host Ollama instead of containerized
- Added host network mode for direct host Ollama access
- Created comprehensive Docker testing scripts
- Added docker-compose.host-ollama.yml alternative configuration
- Created docker_test_summary.md with complete test results
- All Docker tests now pass successfully
- Container can access host Ollama and respond to chat requests

--- a/docker-compose.host-ollama.yml
+++ b/docker-compose.host-ollama.yml
@@ -4,11 +4,12 @@ services:
   # Qwen-Agent Chatbot API
   qwen-agent-chatbot:
     build: .
-    network_mode: host
+    ports:
+      - "8002:8002"
     environment:
       - DEFAULT_MODEL=qwen3:14b
       - DEFAULT_MODEL_TYPE=oai
-      - MODEL_SERVER_URL=http://localhost:11434/v1
+      - MODEL_SERVER_URL=http://host.docker.internal:11434/v1
       - MODEL_SERVER_API_KEY=EMPTY
       - HOST=0.0.0.0
       - PORT=8002
@@ -27,19 +28,9 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
-
-  # Optional: Nginx reverse proxy (uncomment if needed)
-  # nginx:
-  #   image: nginx:alpine
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf
-  #     - ./ssl:/etc/nginx/ssl
-  #   depends_on:
-  #     - qwen-agent-chatbot
-  #   restart: unless-stopped
-
- 
+networks:
+  default:
+    name: qwen-agent-network 
